# GLiClass.c

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Readme.md  convert_to_onnx.bat  convert_to_onnx.sh  main.c  run_GLiClass.sh
ONNX/: convert_to_onnx.py  test_onnx.py
ONNX_CONVERTING/: convert_to_onnx.py  test_onnx.py
include/: configs.h  model.h  parallel_processor.h  paths.h  postprocessor.h  preprocessor.h  read_data.h  tokenizer.h
src/: model.c  parallel_processor.c  postprocessor.c  preprocessor.c  read_data.c  tokenizer.c
